2004-06-28  Choe Hwanjin <krisna@kldp.org>
	* nabi의 candidate table로 부터 추출한 한자 데이터 사용
	* 컴파일시 기본 자판 설정 메뉴 추가: --with-default-keyboard=2/39/3f
	  옵션을 사용하여 configure 스크립트 실행시 설정 가능

2004-05-13  Choe Hwanjin <krisna@kldp.org>
	* Internationalization: 메뉴에서 한글로 보이게 함

2003-12-26  Choe Hwanjin <krisna@kldp.org>
	* gtkimcontexthangul.c,hangulcandidate.h,hanjatable.h,chartable.h:
	  hanja_table과 char_table을 통합해서 candidata_table 하나로 만듦.
	  surrounding을 이용하는 루틴을 추가. hanjatable.h,chartable.h 파일은
	  삭제

2003-12-20  Choe Hwanjin <krisna@kldp.org>
	* release 0.9.9

2003-12-18  Choe Hwanjin <krisna@kldp.org>
	* gtkimcontexthangul.c: set_client_window 함수를 반복해서 호출할 경우에
	  대한 처리

2003-12-10  Choe Hwanjin <krisna@kldp.org>
	* gtkimcontexthangul.c: get_toplevel_window 함수를 다시 구현

2003-11-27  Choe Hwanjin  <krisna@people.kldp.org>
        * gtkimcontexthangul.c, gtkimcontexthangul.h:
          set_cursor_location method 구현,
	  candidate window를 커서 위치 근처에 표 현
        * gtkimcontexthangul.c: remove period in hanja candidate window
 
2003-11-23  Choe Hwanjin  <krisna@people.kldp.org>
        * NEWS, TODO: 문서 업데이트

2003-11-20  Choe Hwanjin  <krisna@people.kldp.org>
	* release 0.9.8
	* configure.in: version up to 0.9.8
	* gtkimcontexthangul.c: remove type-punned pointer expression
	* gtkimcontexthangul.c, gtkrc:
	  widget name을 imhangul_hanja에서 imhangul_candidate로 변경
	* gtkrc: change default encoding from euckr to utf8
	* gtkimcontexthangul.c, hanjatable.h, hanjatable.py:
	  rename hanjatable to hanja_table

2003-11-11  Choe Hwanjin  <krisna@people.kldp.org>
	* gtkimcontexthangul.c: apply new candidate window routine
	* gtkrc: gtkrc 기본값 수정

2003-11-10  Choe Hwanjin  <krisna@people.kldp.org>
	* gtkimcontexthangul.h: new candidate window code 적용
	* gtkimcontexthangul.c: candidate window 코드 추가

2003-10-30  Choe Hwanjin  <krisna@people.kldp.org>
	* 여러 텍스트 파일을 모두 UTF-8 인코딩으로 변환
	* ChangeLog, NEWS, README: 텍스트 인코딩을 UTF-8로 변환

2003-10-20  Choe Hwanjin <krisna@kldp.org>